# MAVS

./: .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  _config.yml
examples/: CMakeLists.txt  actor_example.cpp  add_rain_to_existing.cpp  camera_example.cpp  camera_soiling_example.cpp  chamfer_distance_example.cpp  chrono_driving_example.cpp  create_random_surface.cpp  curve_fitter_example.cpp  date_time_example.cpp  drop_test_example.cpp  dynamic_surface_example.cpp  forester_example.cpp  forester_example_simple.cpp  free_camera_example.cpp  gps_example.cpp  helicopter_example.cpp  hmf_read_write_example.cpp  imu_example.cpp  lidar_example.cpp  lidar_roughness_analyzer.cpp  mavs_data_path_example.cpp  multi_vehicle_example.cpp  oakd_camera_example.cpp  pathtrace_example.cpp  pts_read_write_example.cpp  radar_example.cpp  render_actor_fall_test.cpp  render_falling_actor_straight_line.cpp  rp3d_driving_example.cpp  rp3d_trailer_example.cpp  simulation_example.cpp  sky_example.cpp  slam_example.cpp  surface_roughness_stats2D.cpp  terrain_creator_example.cpp  uav_example.cpp
examples/halo/: CMakeLists.txt  batch_halo_simulation.cpp  dis_datagen.cpp  halo_car_interactive.cpp  halo_car_lidar_analysis.cpp  halo_datagen.cpp  halo_lidar_trainer.cpp  lidar_rotation_analysis.cpp  lidar_trainer_v2.cpp
src/: CMakeLists.txt  mavs_c_defs.cpp  mavs_c_defs.h  mavs_matlab_interface.cpp  mavs_matlab_interface.h
src/drivers/: CMakeLists.txt
src/drivers/simple_path_planner/: astar.cpp  astar_node.h  simple_path_planner.cpp
src/drivers/simple_waypoint_follower/: simple_waypoint_follower.cpp
src/interfaces/: CMakeLists.txt  drive_px2.cpp
src/mavs_core/: CMakeLists.txt
src/mavs_core/coordinate_systems/: coord_conversions.cpp  ellipsoid.cpp
src/mavs_core/environment/: clouds.cpp  environment.cpp  solar_position.cpp
src/mavs_core/math/: curve_fitter.cpp  matrix.cpp  polygon.cpp  segment.cpp  utils.cpp
src/mavs_core/plotting/: map_viewer.cpp  mavs_plotting.cpp
src/mavs_core/pose_readers/: anvel_vprp_reader.cpp  trail.cpp  waypoints.cpp
src/mavs_core/terrain_generator/: ecosystem.cpp  erosion_simulator.cpp  grd_surface.cpp  heightmap.cpp  plant.cpp  profile_2d.cpp  random_scene.cpp  random_surface.cpp  species.cpp  surface.cpp  terrain_elevation_functions.cpp
src/mavs_python/: CMakeLists.txt  create_rows_gui.py  mavs_interface.py  mavs_lib_loader.py  vehicle_editor.py
src/mavs_python/examples/: add_rain_to_image_example.py  advance_time_example.py  bumpy_surface_generator.py  camera_brightness_example.py  camera_label_example.py  camera_lidar_animation.py  camera_limit_example.py  camera_rain_example.py  camera_saturation_and_temp_example.py  characterize_vehicle_performance.py  chrono_driving_example.py  dem_example.py  driving_example.py  free_camera_example.py  lidar_chamfer_distance_example.py  lidar_potholes_example.py  make_video.py  map_viewer_example.py  mavs_anvel_example.py  mavs_anvel_follower.py  mavs_camera_blur_example.py  mavs_camera_buffer_example.py  mavs_imu_example.py  mavs_plot_example.py  mavs_python_bounding_box_example.py  mavs_python_example.py  mavs_terrain_gap_example.py  mavs_thermal_camera_example.py  mavs_veg_dens_example.py  mavs_viewer_examples.py  oakd_example.py  path_tracer_example.py  roughness_example.py  rp3d_chrono_compare.py  scene_creator_example.py  simulation_example.py  snow_camera_example.py  waypoint_load_save_example.py  zed2i_example.py
src/mavs_python/gui/: edit_controller_window.py  edit_sensor_window.py  edit_waypoint_window.py  environment_window.py  material_viewer_gui.py  mavs_defs.py  mavs_interactive_sim.py  menu_bar.py  plot_timing.py  sliderbar_sim.py  vehicle_editor.py  vehicle_tabs.py
src/raytracers/: CMakeLists.txt  animation.cpp  bounding_box.cpp  bounding_cylinder.cpp  fresnel.cpp  mesh.cpp  mtl_viewer.cpp  reflectance_spectrum.cpp
src/raytracers/embree_tracer/: embree_datatypes.h  embree_tracer.cpp
src/raytracers/simple_tracer/: aabb.cpp  simple_tracer.cpp  sphere.cpp
src/raytracers/texture_layers/: layered_surface.cpp  texture_layer.cpp
src/sensors/: CMakeLists.txt  annotation.cpp  annotation_colors.cpp
src/sensors/camera/: add_rain_to_existing_image.cpp  camera.cpp  camera_soiling.cpp  distortion_model.cpp  fisheye_camera.cpp  lens_drop.cpp  lwir_camera.cpp  micasense_red_edge.cpp  nir_camera.cpp  oak_d_camera.cpp  ortho_camera.cpp  path_tracer.cpp  rccb_camera.cpp  rgb_camera.cpp  simple_camera.cpp  spherical_camera.cpp  zed2i_camera.cpp  zed2i_camera_orig.cpp
src/sensors/compass/: compass.cpp
src/sensors/gps/: gps.cpp  gps_default.h  satellite.cpp
src/sensors/imu/: imu.cpp  imu_simple.cpp  mems_sensor.cpp
src/sensors/ins/: ins.cpp  swiftnav_msg.cpp  swiftnav_piksi.cpp
src/sensors/io/: applanix_io.cpp  json_io.cpp  user_io.cpp
src/simulation/: CMakeLists.txt  mavs_sensor_sim.cpp  mavs_simulation.cpp  ortho_viewer.cpp  rp3d_vehicle_viewer.cpp  sensor_sim.cpp  simulation.cpp  simulation_loader.cpp
src/vehicles/: CMakeLists.txt  autonomous_vehicle.cpp
unit_tests/: CMakeLists.txt  unit_tests.cpp  utest_mavs_animation.cpp  utest_mavs_camera.cpp  utest_mavs_camera_distortion.cpp  utest_mavs_chrono_vehicle.cpp  utest_mavs_clouds.cpp  utest_mavs_gps.cpp  utest_mavs_imu.cpp  utest_mavs_lidar.cpp  utest_mavs_pathtrace.cpp  utest_mavs_radar.cpp  utest_mavs_rtk.cpp  utest_mavs_snow.cpp  utest_mavs_solar_position.cpp  utest_mavs_spherical_camera.cpp  utest_mavs_springtire.cpp  utest_mavs_vehicle.cpp  utest_mavs_vti.cpp  utest_swiftnav_io.cpp
utilities/: CMakeLists.txt  batch_obj_convert.cpp  create_ecosystem.cpp  dem_loader.cpp  fix_texture.cpp  heightmap_generator.cpp  heightmap_to_mesh.cpp  mavs_benchmark.cpp  mesh_manipulator.cpp  obj_viewer.cpp  path_tracer_render.cpp  rp3d_vehicle_viewer.cpp  scene_viewer.cpp  top_down_ortho.cpp
utilities/scene_builder/: README.md  app.js  index.html  preview_scene.py  run_simulation.py  server.py  styles.css
utilities/scene_editor/: CMakeLists.txt  scene_editor.cpp  scene_editor.h  scene_editor_main.cpp
(+446 files in other folders)
